--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "simpledb",
-  "version": "0.0.7",
+  "name": "@buttonfly/simpledb",
+  "version": "0.0.8",
   "description": "Node.js sqlite3 wrapper",
   "main": "node/index.js",
   "files": [
