--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node.js sqlite3 client",
   "main": "node/index.js",
   "files": [
+    "lib",
     "index.js",
     "native",
     "src",
