--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bindings": "~1.2.1",
-    "node-addon-api": "^1.0.0"
+    "bindings": "^1.2.1",
+    "node-addon-api": "^1.7.1"
   },
   "scripts": {
     "install": "cmake-js compile",
