--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: apt-get install -y libsqlite3-dev libgoogle-glog-dev
+    - run: sudo apt-get install -y libsqlite3-dev libgoogle-glog-dev
     - run: npm install -g cmake-js      
     - run: npm install
     - run: npm run build --if-present
