--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "simpledbc",
-  "version": "0.4.12",
+  "version": "0.4.13",
   "description": "Node.js sqlite3 nodejs binding",
-  "main": "index.js",
-  "types": "lib/connetion.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "lib",
-    "index.js",
+    "dist",
     "native",
     "src",
-    "CMakeLists.txt",
-    "tsconfig.json"
+    "CMakeLists.txt"
   ],
   "keywords": [
     "sqlite3",
@@ -26,12 +24,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^13.9.0",
     "bindings": "^1.5.0",
     "node-addon-api": "^2.0.0"
   },
   "scripts": {
-    "install": "cmake-js compile && tsc",
+    "install": "cmake-js compile",
     "test": "mocha"
   },
   "gypfile": true,
@@ -44,6 +41,7 @@
     "url": "git+https://github.com/gurumian/simpledb.git"
   },
   "devDependencies": {
+    "@types/node": "^13.9.0",
     "chai": "^4.2.0",
     "cmake-js": "^6.0.0",
     "mocha": "^7.0.1",
