--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,7 @@ jobs:
     - run: npm install -g typescript
     - run: npm install
     - run: npm run build --if-present
-    - run: tcs
+    - run: tsc
     - run: npm test
       env:
         CI: true
